# uts-student-support-assistant

./: .gitignore  README.md  app.py  pyproject.toml
config/: config.yaml
data/: coverage_results.json  eval_results.json  eval_results_fixed500.jso  eval_results_fixed500.json  eval_results_no_rag.json  test_set.json
src/: chunker.py  coverage_test.py  embedder.py  evaluate.py  generate_test_set.py  pipeline.py  plot_results.py  rag.py  scraper.py
