[project]
name = "uts-student-support-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "tungbi811",email = "tungduynguyen811@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "langchain-experimental (>=0.4.0,<0.5.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
